--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,19 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.koin</groupId>
+            <artifactId>koin-spark</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.koin</groupId>
+            <artifactId>koin-test</artifactId>
+            <version>0.9.3</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <repositories>
