--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.github.cbismuth</groupId>
+            <artifactId>junit-repeat-rule</artifactId>
+            <version>1.1.2</version>
+        </dependency>
+
+        <dependency>
             <groupId>io.github.rybalkinsd</groupId>
             <artifactId>kohttp</artifactId>
             <version>0.11.1</version>
